--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <div class="uk-container uk-flex uk-flex-column uk-padding uk-width-xlarge">
       <h1 class="uk-text-center uk-text-bold">nana Scraper</h1>
       <form id="form" class="uk-text-center">
-        <input class="uk-margin uk-input" type="url" pattern="https:\/\/(en\.)?nana-music\.com\/sounds\/[a-f0-9]{6,}" placeholder="https://nana-music.com/sounds/..." required>
+        <input
+          class="uk-margin uk-input"
+          type="url"
+          pattern="https:\/\/(en\.)?nana-music\.com\/sounds\/[a-f0-9]{6,}"
+          placeholder="https://nana-music.com/sounds/..."
+          required
+        >
         <button class="uk-button uk-button-primary" type="submit">Get Audio</button>
       </form>
       <h5 id="response" class="uk-text-bold uk-text-center" hidden></h5>
@@ -33,7 +39,7 @@
       <p class="uk-margin-remove uk-text-lead">How does this work?</p>
       <p class="uk-text-meta">
         Every request happens on client-side using
-        <a class="uk-text-primary" href="https://corsproxy.org/">*CORS Proxy API</a>
+        <a class="uk-text-primary" href="https://github.com/manga-raiku/proxy">*Manga Raiku Proxy API</a>
         then processed with RegEx expressions to retrieve data from the response.
       </p>
       <p class="uk-margin-remove uk-text-lead">Why?</p>
@@ -42,7 +48,10 @@
       <div class="uk-text-small">
         <p class="uk-margin-remove">Let's normalize not stealing everything from artists :D</p>
         <p class="uk-margin-remove">Maintained by <a href="https://github.com/sglkc">sglkc</a></p>
-        <p class="uk-margin-remove">Licensed under the <a href="https://github.com/sglkc/nana/LICENSE">MIT License</a></p>
+        <p class="uk-margin-remove">
+          Licensed under the
+          <a href="https://github.com/sglkc/nana/LICENSE">MIT License</a>
+        </p>
       </div>
     </div>
   </body>
