feat: update html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <p class="uk-margin-remove uk-text-lead">How does this work?</p>
       <p class="uk-text-meta">
         Every request happens on client-side using
-        <a class="uk-text-primary" href="https://github.com/manga-raiku/proxy">*Manga Raiku Proxy API</a>
+        <a class="uk-text-primary" href="https://allorigins.win">All Origins</a>
         then processed with RegEx expressions to retrieve data from the response.
       </p>
       <p class="uk-margin-remove uk-text-lead">Why?</p>
